--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,76 @@
-apturl==0.5.2
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cssselect==1.1.0
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-future==0.18.2
-html5lib==1.0.1
-httplib2==0.14.0
-idna==2.8
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-lxml==4.5.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-monotonic==1.5
-netifaces==0.10.4
-numpy==1.17.4
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-scour==0.37
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-soupsieve==1.9.5
-systemd-python==234
-ubuntu-advantage-tools==27.5
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-wadllib==1.3.3
+asttokens==2.0.5
+autopep8==1.6.0
+backcall==0.2.0
+black==22.1.0
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+click-default-group==1.2.2
+cloup==0.7.1
+colorama==0.4.4
+colour==0.1.5
+commonmark==0.9.1
+cssselect2==0.4.1
+cycler==0.11.0
+decorator==5.1.1
+executing==0.8.2
+fonttools==4.29.1
+glcontext==2.3.4
+idna==3.3
+ipython==8.0.1
+isosurfaces==0.1.0
+jedi==0.18.1
+kiwisolver==1.3.2
+manim==0.14.0
+manimgl==1.4.1
+ManimPango==0.3.1
+mapbox-earcut==0.12.11
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+moderngl==5.6.4
+moderngl-window==2.4.1
+mpmath==1.2.1
+multipledispatch==0.6.0
+mypy-extensions==0.4.3
+networkx==2.6.3
+numpy==1.22.2
+packaging==21.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+platformdirs==2.4.1
+prompt-toolkit==3.0.27
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycairo==1.20.1
+pycodestyle==2.8.0
+pydub==0.25.1
+pyglet==1.5.21
+Pygments==2.11.2
+PyOpenGL==3.1.5
+pyparsing==3.0.7
+pyrr==0.10.3
+python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.27.1
+rich==11.1.0
+scipy==1.8.0
+screeninfo==0.6.7
+six==1.16.0
+skia-pathops==0.7.2
+srt==3.5.1
+stack-data==0.1.4
+sympy==1.9
+tinycss2==1.1.1
+toml==0.10.2
+tomli==2.0.0
+tqdm==4.62.3
+traitlets==5.1.1
+typing-extensions==4.0.1
+urllib3==1.26.8
+validators==0.18.2
+watchdog==2.1.6
+wcwidth==0.2.5
 webencodings==0.5.1
-xkit==0.0.0
